feat: enrich JWT claims with role, dealerId, and permissions
Embed role, dealerId, and permissions in JWT token claims and wire
them through the authentication filter into a custom User principal.

- JwtService: generateToken from User entity, extract role/dealerId
- AuthenticationService: register defaults to DEALER_EMPLOYEE,
  authenticate returns dealerId and permissions in response
- AuthenticationResponse: add dealerId and permissions fields
- JwtAuthenticationFilter: construct custom User from JWT claims
- SecurityConfig: add @EnableMethodSecurity, update CORS/permit rules